@@ -21,3 +21,4 @@ New internal features:
 - support for ERP5 sites (by Yoshinori Okuji)
 - added a 'Cache' management option in the ZMI to set cache settings for
   the Image Box Templet (e.g. Accelarated HTTP Cache Manager)
+- local themes can be set at the portal root
